--- a/vits_trainer.ipynb
+++ b/vits_trainer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNDcg+C4Ov4wh2CxI8/9tfI",
+      "authorship_tag": "ABX9TyPEr35y0UPJ6cOV9zG3PFXm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,10 +65,22 @@
         "%cd vits"
       ],
       "metadata": {
-        "id": "TslIbTfrnohe"
+        "id": "TslIbTfrnohe",
+        "outputId": "cf3f7a4e-4960-4dc8-ac31-27f6a057a68a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/vits\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -84,19 +96,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Install Librosa 0.9.1\n",
-        "!pip install librosa==0.9.1"
-      ],
-      "metadata": {
-        "id": "7gopUvndBkW9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title Install custom pyTorch\n",
+        "#@title Install custom PyTorch\n",
         "!pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 torchaudio==0.13.1 --extra-index-url https://download.pytorch.org/whl/cu117"
       ],
       "metadata": {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "vTmlrq1an5_K"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -187,9 +187,9 @@
       "cell_type": "code",
       "source": [
         "#@title Train\n",
-        "%load_ext tensorboard\n",
-        "%tensorboard --logdir ../drive/MyDrive/vits-files\n",
-        "!python train.py -c configs/ljs_base.json -m ../drive/MyDrive/vits-files"
+        "%reload_ext tensorboard\n",
+        "%tensorboard --logdir /content/drive/MyDrive/vits-files/logs\n",
+        "!python train.py -c configs/ljs_base.json -m /content/drive/MyDrive/vits-files/logs"
       ],
       "metadata": {
         "id": "Mk3DZOd_u55M"
@@ -231,7 +231,8 @@
         "    return text_norm"
       ],
       "metadata": {
-        "id": "LAVX0raTGdjK"
+        "id": "LAVX0raTGdjK",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -257,7 +258,7 @@
         "    **hps.model).cpu()\n",
         "_ = net_g.eval()\n",
         "\n",
-        "_ = utils.load_checkpoint(\"/content/drive/MyDrive/vits-files/G_8000.pth\", net_g, None)"
+        "_ = utils.load_checkpoint(\"/content/drive/MyDrive/vits-files/logs/G_8000.pth\", net_g, None)"
       ],
       "metadata": {
         "id": "76zcakFvGl4I"
