--- a/vits_trainer.ipynb
+++ b/vits_trainer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOCIeDu3fEiyty9/GINdTQg",
+      "authorship_tag": "ABX9TyPWEhSL2XegysGRXwknypMw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,8 +45,19 @@
       },
       "outputs": [],
       "source": [
-        "!nvidia-smi"
+        "!wget https://data.keithito.com/data/speech/LJSpeech-1.1.tar.bz2"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tar -xjf LJSpeech-1.1.tar.bz2"
+      ],
+      "metadata": {
+        "id": "XAN_nlMqGpKw"
+      },
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -65,10 +76,22 @@
         "%cd vits"
       ],
       "metadata": {
-        "id": "TslIbTfrnohe"
+        "id": "TslIbTfrnohe",
+        "outputId": "33601ebb-2d4e-42df-fe59-ff70700de900",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/vits\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -96,54 +119,13 @@
     {
       "cell_type": "code",
       "source": [
-        "%cd monotonic_align"
-      ],
-      "metadata": {
-        "id": "7gh_lZxYn0em"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!mkdir monotonic_align"
-      ],
-      "metadata": {
-        "id": "vTmlrq1an5_K"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!python setup.py build_ext --inplace"
-      ],
-      "metadata": {
-        "id": "3sXSnMSesz1q"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "%cd monotonic_align\n",
+        "!mkdir monotonic_align\n",
+        "!python setup.py build_ext --inplace\n",
         "%cd .."
       ],
       "metadata": {
-        "id": "IV2MtBCXCLCd"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!sudo apt-get install espeak -y # Doubt this is needed for training"
-      ],
-      "metadata": {
-        "id": "zqmXkiKpn94v"
+        "id": "7gh_lZxYn0em"
       },
       "execution_count": null,
       "outputs": []
@@ -229,7 +211,7 @@
       "cell_type": "code",
       "source": [
         "net_g = SynthesizerTrn(\n",
-        "    len(symbols),\n",
+        "    len(symbols), # TODO: fix symbols with vocab.size\n",
         "    hps.data.filter_length // 2 + 1,\n",
         "    hps.train.segment_size // hps.data.hop_length,\n",
         "    **hps.model).cpu()\n",
